fix horizontal scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,8 @@ body {
   font-weight: 300;
   color: #9698a6;
   line-height: 1.3;
-  min-height: 300vh;
+  min-height: 350vh;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
